--- a/include/sidebar.html
+++ b/include/sidebar.html
@@ -1,7 +1,15 @@
 
 						      <div class="panel-body">
 						      	<p class="small">Reseller Web site, including shopping cart and credit card processing. <br>24/7 support for your customers.<br>How to be a Reseller ebook, written by one of our top resellers.<br>30-day Money Back Guarantee and much more...</p>	
-						      	  
+						      	
+						      	<ul>
+					      	    	<li>Deluxe Linux Hosting with cPanel</li>
+					      	    	<li>Business Email</li>
+					      	    	<li>Business Plus Website Builder</li>
+					      	    	<li>Search Engine Visibility</li>
+					      	    	<li>Email Marketing - Pro</li>
+					      	    	<li>Deluxe Online Storage</li>
+						      	</ul>
 						      </div>
 						      <div class="text-center">
 					    		<a href="https://www.secureserver.net/reseller/reseller-bonus-software.aspx?ci=91940&prog_id=yeapnetwork&pl_id=309511" class="btn-lg btn-info" role="button">More</a>
