Removed the basic and pro reseller sections and have 1 section for both plans which is reseller-plans, re-order the sections, placed my-account section right after the reseller-plans section

--- a/css/pd.yeap.css
+++ b/css/pd.yeap.css
@@ -8196,6 +8196,12 @@ nav ul {
   z-index: 100;
 }
 
+.fa-support {
+  position: relative;
+  bottom: 180px;
+  z-index: 101;
+}
+
 /* DISABLE the Horizontal Scroll */
 html, body {
   max-width: 100%;
