--- a/include/login.html
+++ b/include/login.html
@@ -9,7 +9,7 @@
 	        	</header>
 	        	
 		        	<article class="row panel-group">
-		        			<div class="col-sm-5 panel panel-primary bg-panel-primary">
+		        			<div class="col-sm-5 panel panel-danger">
 						      <div class="panel-heading">
 						      	<h3>Create a Free Account</h3>
 						      </div>
@@ -27,7 +27,7 @@
 					    	  </div><br>
 						    </div>
 
-						    <div class="col-sm-5 col-md-offset-2  panel panel-primary bg-panel-primary">
+						    <div class="col-sm-5 col-md-offset-2  panel panel-danger">
 						      <div class="panel-heading">
 						      	<h3>Access Your Back Office</h3>
 						      </div>
