--- a/include/pro-reseller.html
+++ b/include/pro-reseller.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	        	<header>
-	        		<h1>Basic Reseller</h1>
+	        		<h1>Reseller Plans</h1>
 	        		<hr class="">
 	        	</header>
 	        	<div class="row panel-group">
@@ -97,9 +97,17 @@
 			            							
 		            						</div>
 		            					</div>
-		            				</div>
-		            				<a href="https://www.secureserver.net/reseller/pro-domain-reseller.aspx?ci=3273&prog_id=yeapnetwork"><button type="button" class="btn-md btn-primary btn btn-block lead">Get started - <span style="color: red;font-weight: bold;">just $249.00</span></button></a>
+		            				</div>	            				
 		            			</div><!-- End row -->
+		            			<!-- Nested buttons colums -->
+	            				<div class="row">
+	            					<div class="col-md-6">
+	            						<a href="https://www.secureserver.net/reseller/basic-domain-reseller.aspx?ci=3272&prog_id=yeapnetwork"><button type="button" class="btn-primary btn btn-block lead">Basic Reseller - <span style="color: red;font-weight: bold;">just $199.00</span></button></a>
+	            					</div>
+	            					<div class="col-md-6">
+	            						<a href="https://www.secureserver.net/reseller/pro-domain-reseller.aspx?ci=3273&prog_id=yeapnetwork"><button type="button" class="btn-primary btn btn-block lead">Pro Reseller - <span style="color: red;font-weight: bold;">just $249.00</span></button></a>
+	            					</div> 
+	            				</div> <!-- End nested buttons colums -->
 	            			</div>
 		        	</article>
 		        	<article class="col-md-3 col-md-offset-1 panel panel-primary bg-panel-primary" >
