Added the login icon & link on the navbar and referral bonus program link on the sidebar

--- a/include/sidebar.html
+++ b/include/sidebar.html
@@ -7,9 +7,9 @@
 					      	    	<li>Business Email</li>
 					      	    	<li>Business Plus Website Builder</li>
 					      	    	<li>Search Engine Visibility</li>
-					      	    	<li>Email Marketing - Pro</li>
 					      	    	<li>Deluxe Online Storage</li>
 						      	</ul>
+						      	<p><a href="http://yeapnetwork.com">FREE REFERRAL REWARD BONUS PROGRAM</a></p>
 						      </div>
 						      <div class="text-center">
 					    		<a href="https://www.secureserver.net/reseller/reseller-bonus-software.aspx?ci=91940&prog_id=yeapnetwork&pl_id=309511" class="btn-lg btn-info" role="button">More</a>
