--- a/css/pd.yeap.css
+++ b/css/pd.yeap.css
@@ -8202,6 +8202,17 @@ nav ul {
   z-index: 101;
 }
 
+.login {
+  font-size: 22px;
+  color: #18BC9C;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.login a {
+  color: #E74C3C;
+}
+
 /* DISABLE the Horizontal Scroll */
 html, body {
   max-width: 100%;
