Removed hr on some sections, made the scroll smoothly and  edited the footer text

--- a/include/footer.html
+++ b/include/footer.html
@@ -3,11 +3,11 @@
 	        		<div class="col-xs-12 text-center">
 	        			<p>@ Yeap Network 2017, all right reserved, developed by <a href="http://dhaiti.pro/" target="-blank">Peter DHaiti</a></p>
 	        		</div>
-	        		<div class="col-xs-12" itemscope itemtype="http://schema.org/Person">
-				   <span itemprop="name">Call us</span>
-				   <span itemprop="company"> Yeap Network</span>
-				   <span itemprop="tel"> 888-407-9575</span>
-				</div>
+	        		<div itemscope itemtype="http://schema.org/Person">
+					   <span itemprop="name">Call us</span>
+					   <span itemprop="company"> Yeap Network</span>
+					   <span itemprop="tel"> 888-407-9575</span>
+					</div>
 			
         		</div>
 			</article>       
