Added some animations, edited the text for SEO purposes, added SEO structured data markup using json and added images expition on htaccess file

--- a/css/pd.yeap.css
+++ b/css/pd.yeap.css
@@ -8299,6 +8299,17 @@ textarea.medium {
   display: none;
 }
 
+span {
+  color: red;
+  font-weight: bold;
+}
+
+.cursor {
+  font-size: 35px;
+  color: #fff;
+  cursor: pointer;
+}
+
 /* Footer */
 #footer {
   text-align: center;
