Installed SSL Certificate

--- a/include/footer.html
+++ b/include/footer.html
@@ -8,6 +8,9 @@
 					   <span itemprop="company"> Yeap Network</span>
 					   <span itemprop="tel"> 888-407-9575</span>
 					</div>
+					<div>
+						<span id="siteseal"><script async type="text/javascript" src="https://seal.starfieldtech.com/getSeal?sealID=iVD32FKMhuXXIT3ZEYhyfee3RQvLsGXY5urbEWQngRHtYQUHmG77TXP5RaFE"></script></span>
+					</div>
 			
         		</div>
 			</article>       
