--- a/include/contact.html
+++ b/include/contact.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
 		        		<!-- angular templating -->
             			<!-- this is where content will be injected -->
             	<div class="row">
