Edited structured data, edit the http request to be compatible with https, added redirect code on htaccess file to redirect http to https

--- a/include/contact.html
+++ b/include/contact.html
@@ -14,12 +14,12 @@
 	                <article class="col-md-7">
 	                  
 					    <div id="mf_placeholder" 
-						     data-formurl="http://yeapnetwork.com/fm/embed.php?id=10741" 
+						     data-formurl="//yeapnetwork.com/fm/embed.php?id=10741" 
 						     data-formheight="825"  
 						     data-paddingbottom="10">
 						</div>
-						<script type="text/javascript" src="http://yeapnetwork.com/fm/js/jquery.ba-postmessage.min.js"></script>
-						<script type="text/javascript" src="http://yeapnetwork.com/fm/js/machform_loader.js"></script>
+						<script type="text/javascript" src="//yeapnetwork.com/fm/js/jquery.ba-postmessage.min.js"></script>
+						<script type="text/javascript" src="//yeapnetwork.com/fm/js/machform_loader.js"></script>
 
 			        </article>
 	        	</div> <!-- End row -->
