--- a/include/login.html
+++ b/include/login.html
@@ -2,7 +2,7 @@
 <script type="text/javascript" scr="login.js"></script> -->
 
 
-<div class="container" ng-controller="myCtrl">
+<div class="container">
 	        	<header>
 	        		<h1>My Account</h1>
 	        	</header>
