--- a/include/footer.html
+++ b/include/footer.html
@@ -1,16 +1,7 @@
 <article class="container-fluid">        		
         		<div class="row">
 	        		<div class="col-xs-12 text-center">
-	        			<p>@ Yeap Network 2017, all right reserved, developed by <a href="http://dhaiti.pro/" target="-blank">Peter DHaiti</a></p>
+	        			<p>@ Yeap Network 2017, all right reserved, developed by <a href="http://dhaiti.pro/" target="-blank">Yeap Developers</a></p>
 	        		</div>
-	        		<div itemscope itemtype="http://schema.org/Person">
-					   <span itemprop="name">Call us</span>
-					   <span itemprop="company"> Yeap Network</span>
-					   <span itemprop="tel"> 888-407-9575</span>
-					</div>
-					<div>
-						<span id="siteseal"><script async type="text/javascript" src="https://seal.starfieldtech.com/getSeal?sealID=grTbbJY6efoRwXWykmMH4jbAt3B3WOTPdm82ssgqI3hbbCY9r4joNxECRLaC"></script></span>
-					</div>
-			
         		</div>
 			</article>       
