Optimized media files, Eliminated render-blocking JavaScript and CSS

--- a/include/contact.html
+++ b/include/contact.html
@@ -1,8 +1,8 @@
 <div class="container">
 		        		<!-- angular templating -->
             			<!-- this is where content will be injected -->
-            	<div class="row">
-					<article class="col-md-5 white-default-hd">
+            	<div class="row text-center">
+					<article class="col-md-12 white-default-hd">
 					<h1>Contact us</h1>
 	        		<hr class="">
 	        		<h3>World Financial Center</h3>
@@ -11,16 +11,10 @@
 	        	    </article>                
 
 
-	                <article class="col-md-7">
-	                  
-					    <div id="mf_placeholder" 
-						     data-formurl="//yeapnetwork.com/fm/embed.php?id=10741" 
-						     data-formheight="825"  
-						     data-paddingbottom="10">
-						</div>
-						<script type="text/javascript" src="//yeapnetwork.com/fm/js/jquery.ba-postmessage.min.js"></script>
-						<script type="text/javascript" src="//yeapnetwork.com/fm/js/machform_loader.js"></script>
-
+	                <article class="col-md-12">
+	                	<h2>You can also contact us via our contact form</h2>
+	                	<hr class="">
+					    <a href="https://www.yeapnetwork.com/contact.html" class="btn-lg btn-info" role="button">Contact us Form</a>
 			        </article>
 	        	</div> <!-- End row -->
         	</div> <!-- End container -->
