--- a/css/pd.yeap.css
+++ b/css/pd.yeap.css
@@ -7945,16 +7945,7 @@ button.close {
 *
 *
 */
-.white-default-hd {
-  color: #FFF;
-  font-weight: bold;
-}
-
-.red-default-hd {
-  color: #FF0000;
-  font-weight: bold;
-}
-
+/*@import url('https://fonts.googleapis.com/css?family=Bungee+Shade|Fugaz+One|Ultra" rel="stylesheet');*/
 marquee {
   width: 100%;
   position: relative;
@@ -7968,17 +7959,16 @@ marquee {
 }
 
 /*Google font api*/
-h1 {
+/*h1 {
   font-family: 'Bungee Shade', cursive;
-}
-
+}*/
 h2 {
-  font-family: 'Ultra', serif;
+  /*font-family: 'Ultra', serif;*/
   color: #fff;
 }
 
 .container h1, .container-fluid h1 {
-  font-size: 2em;
+  font-size: 3em;
 }
 
 .hd-video-text h1 {
@@ -8004,7 +7994,7 @@ h2 {
 }
 
 #auto-typing {
-  font-family: 'Fugaz One', cursive;
+  /*font-family: 'Fugaz One', cursive;*/
   color: red;
   font-size: 2em;
 }
@@ -8229,7 +8219,7 @@ html, body {
   /* This image will be displayed fullscreen */
   background: url("../img/wfc.jpg") no-repeat center center;
   /* Ensure the html element always takes up the full height of the browser window */
-  min-height: 100%;
+  height: 100%;
   /* The Magic */
   background-size: cover;
 }
@@ -8313,6 +8303,16 @@ span {
   font-size: 35px;
   color: #fff;
   cursor: pointer;
+}
+
+.white-default-hd {
+  color: #FFF;
+  font-weight: bold;
+}
+
+.red-default-hd {
+  color: #FF0000;
+  font-weight: bold;
 }
 
 /* Footer */
