--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -6761,15 +6761,9 @@ button.close {
 *
 */
 
-.white-default-hd {
-  color: #FFF;
-  font-weight: bold;
-}
 
-.red-default-hd {
-  color: #FF0000;
-  font-weight: bold;
-}
+/*@import url('https://fonts.googleapis.com/css?family=Bungee+Shade|Fugaz+One|Ultra" rel="stylesheet');*/
+
 
 marquee {
   width: 100%;
@@ -6784,17 +6778,17 @@ marquee {
 }
 
 /*Google font api*/
-h1 {
+/*h1 {
   font-family: 'Bungee Shade', cursive;
-}
+}*/
 
 h2 {
-  font-family: 'Ultra', serif;
+  /*font-family: 'Ultra', serif;*/
   color: #fff;
 }
 
 .container h1, .container-fluid h1 {
-    font-size: 2em;
+    font-size: 3em;
 }
 
 .hd-video-text h1 {
@@ -6820,7 +6814,7 @@ h2 {
 }
 
 #auto-typing {
-  font-family: 'Fugaz One', cursive;
+  /*font-family: 'Fugaz One', cursive;*/
   color: red;
   font-size: 2em;
 }
@@ -7051,8 +7045,8 @@ html, body {
   background:url('../img/wfc.jpg') no-repeat center center;
 
   /* Ensure the html element always takes up the full height of the browser window */
-  min-height:100%;
-
+  height:100%;
+ 
   /* The Magic */
   background-size:cover;
 }
@@ -7147,6 +7141,16 @@ span{
   font-size:35px;
   color:#fff;
   cursor:pointer;
+}
+
+.white-default-hd {
+  color: #FFF;
+  font-weight: bold;
+}
+
+.red-default-hd {
+  color: #FF0000;
+  font-weight: bold;
 }
 
 /* Footer */
