--- a/include/header.html
+++ b/include/header.html
@@ -1,6 +1,6 @@
 
 			        <!-- Add typeit - a jQuery plugin that allows auto-typing texts -->
-			        <h3 id="auto-typing"></h3> 
+			        <h3 id="auto-typing" class="lead"></h3> 
 					<script type="text/javascript">
                    		$('#auto-typing').typeIt({
 						     strings: ["Build your own successful online business!", "Set the retail pricing YOU want", "Customize YOUR Web site", "Get started today for only $199.00"],
