--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -6846,7 +6846,7 @@ header .fa-caret-down, header .fa-caret-up {
   color: red;
   font-size: 80px;
   border-style: none;
-  margin-top: 2em;
+  margin-top: 1.5em;
 }
 
 section .fa-caret-down, section .fa-caret-up, footer .fa-caret-up {
@@ -6979,9 +6979,19 @@ nav ul{
     background-size: cover;
 }
 
-#translate {
+.phone {
   position: relative;
   top: 53px;
+  font-size: 2em;
+  font-style: bold;
+}
+
+.phone a {
+color: InfoBackground;
+}
+
+.phone .glyphicon-phone {
+color: #ff0000;
 }
 
 #home {
